--- a/KosaESS/src/main/resources/templates/login.html
+++ b/KosaESS/src/main/resources/templates/login.html
@@ -22,8 +22,8 @@
 						<label for="pwd"></label> <input style="width: 50%;" type="password"
 							name="pwd" id="pwd" class="" placeholder="비밀번호">
 					</div>
-					<div class="submit">
-						<input style="width: 50%;" type="submit" class="loginBtn" th:value="로그인">
+					<div class="submit" style="margin:auto";>
+						<input style="width: 80%;" type="submit" class="loginBtn" th:value="로그인">
 					</div>
 				</form>
 			</div>
