--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -15,12 +15,12 @@
 	<div class="container" style="display: flex;">
 		<div style="width: 80%">
 			<div class="maintext">
-				<h1 style="color: #0E5881; margin-top: 3%;">교육 과정 지원 상세</h1>
+				<h1 style="color: #0E5881;">교육 과정 지원 상세</h1>
 			</div>
 			<div class="content">
 				<table>
 					<tr>
-						<th>이름</th>
+						<th>교육명</th>
 						<td colspan="5" th:text="${classDetail.clssNm}"></td>
 						<th>교육 상태</th>
 						<td style="width: 10%;" th:text="${classDetail.cmcdNm}"></td>
@@ -54,7 +54,7 @@
 						<td th:text="${classDetail.limitCnt}+ '명'"></td>
 					</tr>
 				</table>
-				<div>
+				<div style="width: 80%;">
 					<div>
 						<h3>교육 주요 내용</h3>
 						<h4 th:text="${classDetail.clssContent}"></h4>
@@ -62,12 +62,14 @@
 					<div class="crclTable">
 						<h3>교육 커리큘럼</h3>
 						<table>
-							<tr>
-								<th>강의명</th>
-								<th style="width: 20%;">과목명</th>
-								<th style="width: 24%;">강사이름</th>
-								<th style="width: 15%;">이수시간</th>
-							</tr>
+							<thead>
+								<tr>
+									<th>강의명</th>
+									<th style="width: 20%;">과목명</th>
+									<th style="width: 24%;">강사이름</th>
+									<th style="width: 15%;">이수시간</th>
+								</tr>
+							</thead>
 							<tr th:each="CurriculumDetailDTO : ${curriculumlist}">
 								<td style="width: 35%;" th:text="${CurriculumDetailDTO.lctrNm}"></td>
 								<td th:text="${CurriculumDetailDTO.sbjtNm}"></td>
@@ -76,7 +78,7 @@
 							</tr>
 							<tfoot>
 								<tr>
-									<th colspan="3">총 이수 시간</th>
+									<th colspan="3" style="border-bottom: 0;">총 이수 시간</th>
 									<td class="lctrTotalTm"></td>
 								</tr>
 							</tfoot>
