--- a/KosaESS/src/main/resources/static/css/student/class_list.css
+++ b/KosaESS/src/main/resources/static/css/student/class_list.css
@@ -58,7 +58,7 @@ input::placeholder {
 .grid-style tr {
 	display: grid;
 	align-items: center;
-	width: 21%;
+	width: 16%;
 	border: 2px solid #0E5881;
 	padding: 1%;
 	margin-bottom: 3%;
@@ -72,9 +72,9 @@ input::placeholder {
 }
 
 .grid-style img {
-	height: 60px;
-	width: 260px;
-	margin: 5% 0px;
+	height: 50px;
+	width: 220px;
+	margin: 5% auto;
 }
 
 .grid-style td {
