--- a/KosaESS/src/main/resources/templates/include/student_header.html
+++ b/KosaESS/src/main/resources/templates/include/student_header.html
@@ -17,6 +17,7 @@
 				<nav>
 					<ul class="barlist">
 						<li><a th:href="@{/student/class}">교육과정지원</a></li>
+						<li><a th:href="@{/student/inquiry}">문의사항</a></li>
 						<li><a th:href="@{/student/notice}">공지사항</a></li>
 						<li><a class="mypage" th:href="@{/login}">로그인</a></li>
 						<li><a class="mypage" th:href="@{/student/join}">회원가입</a></li>
