--- a/KosaESS/src/main/resources/templates/student/notice_list.html
+++ b/KosaESS/src/main/resources/templates/student/notice_list.html
@@ -16,17 +16,23 @@
 		<div class="maintext">
 			<h1 style="color: #0E5881; margin-top: 3%;">공지사항</h1>
 		</div>
-		<div class="content">
-			<table class="notice-table" style="width: 90%;">
+		<div class="content" style="flex-direction: column;">
+			<div class="search">
+				<div class="searchform">
+					<input type="text" class="searchInput" placeholder="공지사항명을 검색하세요.">
+					<input type="button" class="searchBtn" value="검색">
+				</div>
+			</div>
+			<table class="notice-table" style="width: 90%; margin: auto;">
 				<thead>
-					<tr class="classRow" style="border: none;">
+					<tr class="noticeRow" style="border: none;">
 						<td>번호</td>
 						<td>공지사항 제목</td>
 						<td>등록일자</td>
 						<td>조회수</td>
 					</tr>
 				<tbody>
-					<tr class="classRow" th:each="postVO , rowStat: ${postList}">
+					<tr class="noticeRow" th:each="postVO , rowStat: ${postList}">
 						<td><span th:text="${rowStat.index + 1}"></span></td>
 						<td><a><span class="goNoticeDetail"
 								style="font-size: 17px;" th:text="${postVO.postTitle}"></span></a></td>
@@ -54,6 +60,48 @@
 				}
 			});
 		});
+		$('.searchInput').on('keyup', function(event) {
+			if (event.key === "Enter") {
+				$('.searchBtn').trigger('click');
+			}
+		});
+		// 검색 버튼 클릭 시의 처리 코드
+		$('.searchBtn').click(function() {
+			// 검색어를 가져옵니다.
+			var searchKeyword = $('.searchInput').val().trim();
+
+			// Ajax 요청을 보냅니다.
+			$.ajax({
+				type : 'GET',
+				url : '/student/notice/search',
+				data : {
+					keyword : searchKeyword,
+				},
+				success : function(data) {
+					// 받은 데이터로 테이블을 업데이트합니다.
+					var noticeTable;
+					noticeTable = $('.notice-table tbody');
+					noticeTable.empty(); // 테이블 내용을 비웁니다.
+
+					for (var i = 0; i < data.length; i++) {
+						var postVO = data[i];
+						var row = $('<tr class="noticeRow"></tr>');
+						row.append('<td><span >' + (i + 1) + '</span></td>');
+						row.append('<td><a><span class="goNoticeDetail" style="font-size: 17px;">' + postVO.postTitle + '</span></a></td>');
+						row.append('<td><span>'+ postVO.rgstDd +'</span></td>')
+						row.append('<td><span>'+ postVO.postHit +'</span></td>')
+						row.append('<td style="display: none;"><span>'+ postVO.postId +'</span></td>')
+						noticeTable.append(row);
+					}
+					$('.totalRowCount').text(data.length);
+				}
+			});
+		});
+
+		function updateTable() {
+			// 검색 버튼 클릭 이벤트 호출
+			$('.searchBtn').trigger('click');
+		}
 	</script>
 </body>
 </html>
