--- a/KosaESS/src/main/resources/static/css/admin/applicant_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/applicant_list.css
@@ -21,6 +21,7 @@ a {
 
 .home-section .content_top {
 	display: flex;
+	justify-content: space-between;
 	margin: 40px;
 }
 
@@ -28,7 +29,6 @@ a {
 	font-size: 20px;
 	color: #333333;
 	font-weight: bold;
-	width: 80%;
 }
 
 .home-section .content_top .route a {
@@ -40,7 +40,6 @@ a {
 
 
 .content_middle .class_summary {
-	width: 90%;
 	border-top: 2px solid #0E5881;
 	
 	margin: 40px;
@@ -79,7 +78,6 @@ a {
 }
 
 .home-section .content_bottom {
-	width: 90%;
 	margin: 40px;
 }
 
